--- a/src/app/pages/application-management/application-atividade-detail/pedido-vistoria-form/pedido-vistoria-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-vistoria-form/pedido-vistoria-form.component.html
@@ -13,61 +13,6 @@
              </p-select>
          </div>
      </div>
-     <!-- <span class="text-xl font-bold mt-6 mb-3 block">
-         IDENTIFICACAO DA EMPRESA
-     </span> -->
-     <!-- <div formGroupName="empresa">
-         <div class="grid grid-cols-12 gap-4">
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="nome" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Nome da Empresa
-                 </label>
-                 <input formControlName="nome" id="nome" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="sede" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Sede
-                 </label>
-                 <input formControlName="sede" id="sede" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="nif" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     NIF
-                 </label>
-                 <input formControlName="nif" id="nif" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="numeroRegisto" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Nº Registo Comercial
-                 </label>
-                 <input formControlName="numeroRegisto" id="numeroRegisto" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="telemovel" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Telemovel
-                 </label>
-                 <input formControlName="telemovel" id="telemovel" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="telefone" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Telefone
-                 </label>
-                 <input formControlName="telefone" id="telefone" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="email" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Email
-                 </label>
-                 <input formControlName="email" id="email" type="text" pInputText fluid />
-             </div>
-             <div class="mb-6 col-span-12 md:col-span-6">
-                 <label for="gerente" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                     Gerente
-                 </label>
-                 <input formControlName="gerente" id="gerente" type="text" pInputText fluid />
-             </div>
-         </div>
-     </div> -->
      <span class="text-xl font-bold mt-6 mb-3 block">
          IDENTIFICACAO DO ESTABELECIMENTO
      </span>
@@ -137,6 +82,7 @@
                  placeholder="Select a Pedido">
              </p-select>
          </div>
+         @if (categoria === 'COMERCIAL') {
          <div class="mb-6 col-span-12 md:col-span-6">
              <label for="tipoEstabelecimento" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                  Tipo de estabelecimento
@@ -146,6 +92,7 @@
                  [showClear]="true" placeholder="Select a Pedido">
              </p-select>
          </div>
+         }
      </div>
      <span class="text-xl font-bold mt-6 mb-3 block">
          CARATERIZACAO DA ATIVIDADE
@@ -157,14 +104,27 @@
              </label>
              <input formControlName="risco" id="risco" type="text" pInputText fluid />
          </div>
+         @if (categoria === 'COMERCIAL') {
          <div class="mb-6 col-span-12 md:col-span-6">
              <label for="atividade" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                  Atividade
              </label>
              <p-select formControlName="atividade" inputId="atividade" [options]="atividadesOpts" optionLabel="name"
-                 fluid filterBy="name" optionValue="value" [showClear]="true" placeholder="Select a Pedido">
+                 fluid filterBy="name" optionValue="value" [showClear]="true"
+                 placeholder="Selecione o tipo de atividade">
              </p-select>
          </div>
+         }@else {
+         <div class="mb-6 col-span-12 md:col-span-6">
+             <label for="tipoAtividade" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                 Tipo de atividade
+             </label>
+             <p-select formControlName="tipoAtividade" inputId="tipoAtividade" [options]="atividadesOpts"
+                 optionLabel="name" fluid filterBy="name" optionValue="value" [showClear]="true"
+                 placeholder="Selecione o tipo de atividade">
+             </p-select>
+         </div>
+         }
          <div class="mb-6 col-span-12 md:col-span-7">
              <label for="grupoAtividade" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                  Tipo de Atividade no Estabelecimento
