--- a/src/app/pages/licencas-certificados/certificados-lista/certificados-lista.component.html
+++ b/src/app/pages/licencas-certificados/certificados-lista/certificados-lista.component.html
@@ -1,8 +1,6 @@
 <div class="card">
-    <p-table #dt [value]="dataList" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="10"
-        [showCurrentPageReport]="true" responsiveLayout="scroll"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
+    <p-table #dt [value]="dataList" responsiveLayout="scroll"
+        [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
         <ng-template #caption>
             <div class="flex flex-wrap gap-2 items-center justify-between">
                 <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
@@ -14,81 +12,54 @@
         </ng-template>
         <ng-template #header>
             <tr>
-                <th pSortableColumn="firstName" class="white-space-nowrap">Nº Certificado
-                    <p-sortIcon field="firstName">
-                    </p-sortIcon>
-                </th>
-                <th pSortableColumn="email" class="white-space-nowrap">
-                    Sociedade Comercial
-                    <p-sortIcon field="email">
-                    </p-sortIcon>
+                <th class="white-space-nowrap">Nº Certificado
                 </th>
                 <th pSortableColumn="email" class="white-space-nowrap">
                     Nº Registo Comercial
                     <p-sortIcon field="email">
                     </p-sortIcon>
                 </th>
-                <th pSortableColumn="firstName" class="white-space-nowrap">
+                <th class="white-space-nowrap">
                     Sede
-                    <p-sortIcon field="firstName">
-                    </p-sortIcon>
                 </th>
-                <th pSortableColumn="role.name" class="white-space-nowrap">Validade<p-sortIcon field="role.name">
-                    </p-sortIcon>
+                <th class="white-space-nowrap">Validade
                 </th>
-                <th pSortableColumn="firstName" class="white-space-nowrap">
+                <th class="white-space-nowrap">
                     Estado
-                    <p-sortIcon field="firstName">
-                    </p-sortIcon>
                 <th class="white-space-nowrap">
                     Ações
                 </th>
             </tr>
         </ng-template>
-        <ng-template #body let-empresa>
+        <ng-template #body let-cert>
             <tr>
                 <td>
-                    {{ empresa.numero }}
+                    {{ cert.pedidoInscricaoCadastro.aplicante.numero }}
                 </td>
                 <td>
-                    {{empresa.sociedade}}
+                    {{cert.numeroRegistoComercial}}
                 </td>
                 <td>
-                    {{empresa.numeroRegistoComercial}}
+                    {{cert.sede.local}} - {{cert.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
                 </td>
                 <td>
-                    {{empresa.sede}}
+                    {{ cert.dataValidade | date: 'dd/MM/yyyy'}}
                 </td>
                 <td>
-                    {{ empresa.validade | date: 'MM/dd/yyyy' }}
+                    <p-tag value="{{getState(cert.dataValidade) | uppercase}}"
+                        severity="{{getState(cert.dataValidade) | statusSeverity}}"
+                        icon="{{getState(cert.dataValidade) | statusIcon}}" />
                 </td>
                 <td>
-                    <p-tag value="{{empresa.estado | titlecase}}" [severity]="empresa.estado | statusSeverity"
-                        icon="{{empresa.estado | statusIcon}}" />
-                </td>
-                <td>
-                    <p-button (click)="op.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                        severity="info" />
-                    <p-popover #op>
-                        <div class="flex flex-col gap-1 w-[25rem]">
-                            <ul class="topbar-menu active-topbar-menu z-50 rounded">
-                                <li role="menuitem" class="!m-0 !mb-4">
-                                    <a href="#">
-                                        <i class="pi pi-fw pi-eye mr-2"></i>
-                                        <span>Ver</span>
-                                    </a>
-                                </li>
-                                <li role="menuitem" class="!m-0">
-                                    <a [routerLink]="['/empresa', empresa.id]">
-                                        <i class="pi pi-fw pi-print mr-2"></i>
-                                        <span>Imprimir</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </p-popover>
+                    <a [routerLink]="[cert.id]" pTooltip="Detalho"
+                        tooltipPosition="top">
+                        <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true" [outlined]="true" />
+                    </a>
                 </td>
             </tr>
         </ng-template>
     </p-table>
+    <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+        [rowsPerPageOptions]="[50, 150, 250]" [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" />
 </div>
