--- a/src/app/pages/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/inicio.component.scss
@@ -5,6 +5,6 @@
     &:hover {
         transform: scale(1.02);
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-        border-color: white;
+        border-color: #34d399;
     }
 }
