--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -61,8 +61,9 @@
                                          </label>
                                          <p-select fluid formControlName="aldeia" [options]="aldeias" optionLabel="nome"
                                              placeholder="Selecione a Aldeia" [filter]="true" filterBy="nome"
-                                             [showClear]="true" (onFilter)="aldeiaFilter($event)"
-                                             (onpanelHide)="onPanelHide()" (onClear)="onPanelHide()">
+                                             [showClear]="true" (onChange)="aldeiaOnChange($event)"
+                                             (onFilter)="aldeiaFilter($event)" (onpanelHide)="onPanelHide()"
+                                             (onClear)="onPanelHide()">
                                          </p-select>
                                      </div>
                                      <div class="flex-auto">
@@ -127,6 +128,36 @@
                                      <p-date-picker formControlName="dataRegisto" id="dataRegisto" [showIcon]="true"
                                          [showButtonBar]="true" fluid dateFormat="dd/mm/yy" inputStyleClass="w-full" />
                                  </div>
+                                 <div class="mb-6 col-span-12">
+                                     <label for="totalTrabalhadores"
+                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         Total Trabalhadores (Funcionários)
+                                     </label>
+                                     <input formControlName="totalTrabalhadores" id="totalTrabalhadores" type="text"
+                                         pInputText fluid />
+                                 </div>
+                                 <div class="mb-6 col-span-12 md:col-span-6">
+                                     <label for="volumeNegocioAnual"
+                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         Volume de Negócios Anual
+                                     </label>
+                                     <p-inputgroup>
+                                         <p-inputgroup-addon>$</p-inputgroup-addon>
+                                         <p-inputnumber formControlName="volumeNegocioAnual" mode="decimal"
+                                             [minFractionDigits]="2" [maxFractionDigits]="2" />
+                                     </p-inputgroup>
+                                 </div>
+                                 <div class="mb-6 col-span-12 md:col-span-6">
+                                     <label for="balancoTotalAnual"
+                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         Balanço total Anual
+                                     </label>
+                                     <p-inputgroup>
+                                         <p-inputgroup-addon>$</p-inputgroup-addon>
+                                         <p-inputnumber formControlName="balancoTotalAnual" mode="decimal"
+                                             [minFractionDigits]="2" [maxFractionDigits]="2" />
+                                     </p-inputgroup>
+                                 </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
                                      <label for="telefone"
                                          class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
@@ -140,6 +171,18 @@
                                          Nº Telemóvel
                                      </label>
                                      <input formControlName="telemovel" id="telemovel" type="tel" pInputText fluid />
+                                 </div>
+                                 <div class="mb-6 col-span-12">
+                                     <label for="outrosDocumentos"
+                                         class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                         DOCUMENTOS
+                                     </label>
+                                     <p-fileupload name="files" method="post" (onSelect)="onSelect($event)"
+                                         [maxFileSize]="maxFileSize" [multiple]="true" accept="application/pdf"
+                                         [showUploadButton]="false" [showCancelButton]="false" mode="advanced"
+                                         (onRemove)="onFileRemove($event)" (onClear)="onFileClear()"
+                                         [customUpload]="true">
+                                     </p-fileupload>
                                  </div>
                              </div>
                          </form>
@@ -169,7 +212,7 @@
                              </div>
 
                              <div formArrayName="acionistas">
-                                 @for (item of acionistasArray.controls; track $index) {
+                                 @for (item of acionistasArray.controls; track $index; let i = $index) {
                                  @if (acionistasArray.length > 1) {
                                  <div class="text-2xl mt-6 mb-6">
                                      <span class="mr-6">{{ item.get('sectionTitle')?.value }}</span>
@@ -222,6 +265,55 @@
                                          <input formControlName="numeroDocumento" id="numeroDocumento" type="text"
                                              pInputText fluid />
                                      </div>
+                                     <div class="mb-6 col-span-12">
+                                         <label for="local"
+                                             class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                             Endereço
+                                         </label>
+                                         <input formControlName="local" id="local" type="text" pInputText fluid
+                                             placeholder="ex. Av. Pres. Nicolau Lobato" />
+                                     </div>
+                                     <div class="mb-6 col-span-12">
+                                         <div class="flex flex-col sm:flex-row sm:items-center gap-6">
+                                             <div class="flex-auto">
+                                                 <label for="aldeia"
+                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     Aldeia
+                                                 </label>
+                                                 <p-select fluid formControlName="aldeia"
+                                                     [options]="listaAldeiaAcionista[i]" optionLabel="nome"
+                                                     placeholder="Selecione a Aldeia" [filter]="true" filterBy="nome"
+                                                     [showClear]="true" (onFilter)="aldeiaAcionistaFilter($event,i)"
+                                                     (onpanelHide)="onPanelHideAcionista(i)"
+                                                     (onChange)="aldeiaAcionistaOnChange($event, i)"
+                                                     (onClear)="onPanelHideAcionista(i)">
+                                                 </p-select>
+                                             </div>
+                                             <div class="flex-auto">
+                                                 <label for="suco"
+                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     Suco
+                                                 </label>
+                                                 <input formControlName="suco" id="suco" type="text" pInputText fluid />
+                                             </div>
+                                             <div class="flex-auto">
+                                                 <label for="posto"
+                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     Posto Administrativo
+                                                 </label>
+                                                 <input formControlName="postoAdministrativo" id="postoAdministrativo"
+                                                     type="text" pInputText fluid />
+                                             </div>
+                                             <div class="flex-auto">
+                                                 <label for="municipio"
+                                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                                     Municipio
+                                                 </label>
+                                                 <input formControlName="municipio" id="municipio" type="text"
+                                                     pInputText fluid />
+                                             </div>
+                                         </div>
+                                     </div>
                                      <div class="mb-6 col-span-12 md:col-span-6">
                                          <label for="telefone"
                                              class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
@@ -235,6 +327,24 @@
                                              Email
                                          </label>
                                          <input formControlName="email" id="email" type="email" pInputText fluid />
+                                     </div>
+                                     <div class="mb-6 col-span-12 md:col-span-6">
+                                         <label for="agregadoFamilia"
+                                             class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                             Agregado Familia
+                                         </label>
+                                         <input formControlName="agregadoFamilia" id="agregadoFamilia" pInputText
+                                             fluid />
+                                     </div>
+                                     <div class="mb-6 col-span-12 md:col-span-6">
+                                         <label for="relacaoFamilia"
+                                             class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                             Relação Família
+                                         </label>
+                                         <p-select fluid formControlName="relacaoFamilia"
+                                             [options]="tipoRelacaoFamiliaOpts" optionLabel="name" optionValue="value"
+                                             placeholder="Selecione o tipo" [showClear]="true">
+                                         </p-select>
                                      </div>
                                  </div>
                                  @if (acionistasArray.length > 1) {
@@ -340,6 +450,21 @@
                                                  </p>
                                              </div>
                                              <div>
+                                                 <p class="text-sm text-gray-400">Total Trabalhadores:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('totalTrabalhadores')?.value }}</p>
+                                             </div>
+                                             <div>
+                                                 <p class="text-sm text-gray-400">Volume de Negócios Anual:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('volumeNegocioAnual')?.value }}</p>
+                                             </div>
+                                             <div>
+                                                 <p class="text-sm text-gray-400">Balanço total Anual:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('balancoTotalAnual')?.value }}</p>
+                                             </div>
+                                             <div>
                                                  <p class="text-sm text-gray-400">Tipo de Propriedade:</p>
                                                  <p class="text-lg text-gray-100">
                                                      {{ empresaForm.get('tipoPropriedade')?.value.name }}</p>
@@ -362,7 +487,7 @@
                                              <h2 class="text-2xl font-semibold text-gray-200">Acionistas</h2>
                                          </div>
                                          <div>
-                                             @for (a of empresaForm.get('acionistas')?.value; track $index) {
+                                             @for (a of empresaForm.get('acionistas')?.getRawValue(); track $index) {
                                              <h3 class="text-xl font-medium text-gray-300 mb-4">
                                                  Acionista&nbsp;{{ $index + 1 }}
                                              </h3>
@@ -387,14 +512,36 @@
                                                      </p>
                                                  </div>
                                                  <div>
+                                                     <p class="text-sm text-gray-400">Agregado Familia:</p>
+                                                     <p class="text-lg text-gray-100">
+                                                         {{ a.agregadoFamilia }}
+                                                     </p>
+                                                 </div>
+                                                 <div>
+                                                     <p class="text-sm text-gray-400">Relação Familia:</p>
+                                                     <p class="text-lg text-gray-100">
+                                                         {{ a.relacaoFamilia }}
+                                                     </p>
+                                                 </div>
+                                                 <div>
                                                      <p class="text-sm text-gray-400">Ações:</p>
                                                      <p class="text-lg text-gray-100">{{ a.acoes }}</p>
+                                                 </div>
+                                                 <div class="md:col-span-2">
+                                                     <p class="text-sm text-gray-400">Endereco:</p>
+                                                     <p class="text-lg text-gray-100">
+                                                         {{ a.local }},
+                                                         {{ a.aldeia.nome }},
+                                                         {{ a.suco }},
+                                                         {{ a.postoAdministrativo }},
+                                                         {{ a.municipio }}
+                                                     </p>
                                                  </div>
                                              </div>
                                              }
                                          </div>
                                      </section>
-                                     <section class="bg-gray-800 p-8 rounded-2xl shadow-lg mb-8">
+                                     <section class="bg-gray-800 p-8 rounded-2xl shadow-lg mt-4 mb-8">
                                          <div class="flex items-center mb-6">
                                              <i class="bi bi-person-vcard mr-4" style="font-size: 2rem"></i>
                                              <h2 class="text-2xl font-semibold text-gray-200">Gerente/Conta de acesso
